--- a/src/app/features/admin-management/product-components/delete-product/delete-product.component.html
+++ b/src/app/features/admin-management/product-components/delete-product/delete-product.component.html
@@ -1,8 +1,8 @@
-<app-jumbotron [Heading]="'DELETE-PRODUCT'"></app-jumbotron>
+<app-jumbotron [Heading]="'admin.main_heading.delete_product'"></app-jumbotron>
 <div class="delete-container">
   <div class="delete-input">
     <app-big-input
-      [placeholder]="'Enter The Product-ID'"
+      [placeholder]="'admin.productform.enter_the_productid'"
       (keyup)="onInputChanged($event.target.value)"
     >
       <app-big-input-action
