--- a/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
+++ b/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
@@ -1,4 +1,4 @@
-<app-jumbotron [Heading]="'ALL-ORDERS'"></app-jumbotron>
+<app-jumbotron [Heading]="'admin.main_heading.all_orders'"></app-jumbotron>
 <div class="user-order-container">
   <div class="user-order">
     <mat-accordion>
