--- a/src/app/layout/homepage/page-content/page-content.component.html
+++ b/src/app/layout/homepage/page-content/page-content.component.html
@@ -1,4 +1,4 @@
-<app-jumbotron [Heading]="heading"></app-jumbotron>
+<app-jumbotron [Heading]="'user.main_heading.homepage'"></app-jumbotron>
 <div class="product-page">
   <app-spinner [loading]="dataLoading"></app-spinner>
   <ng-container *ngIf="show"
