--- a/src/app/shared/big-input/big-input/big-input.component.html
+++ b/src/app/shared/big-input/big-input/big-input.component.html
@@ -8,7 +8,7 @@
     (focus)="hasFocus = true"
     (blur)="hasFocus = false"
     [value]="value"
-    [placeholder]="placeholder"
+    placeholder="{{placeholder | translate}}"
     [disabled]="disabled"
   />
   <ng-content></ng-content>
