--- a/src/app/core/auth-management/login/login.component.html
+++ b/src/app/core/auth-management/login/login.component.html
@@ -1,45 +1,54 @@
 <div class="input-template">
   <mat-card class="input-card">
     <mat-card-header>
-      <mat-card-title>Sign In</mat-card-title>
+      <mat-card-title>{{"user.form.sign_in" | translate}}</mat-card-title>
     </mat-card-header>
     <form class="input-form" [formGroup]="loginform">
       <mat-form-field class="input-full-width">
-        <mat-label>Username</mat-label>
+        <mat-label>{{"user.form.username" | translate}}</mat-label>
         <input autocomplete="off" matInput formControlName="usernameFormControl" />
         <mat-error *ngIf="hasError('usernameFormControl','minlength')">
-          Username must be at least 3 characters long.
+          {{"user.form.username" | translate}}
+          {{"user.form_validations.must_be_at_least_3_characters_long" | translate}}.
         </mat-error>
         <mat-error *ngIf="hasError('usernameFormControl','required')">
-          Username is <strong>required</strong>
+          {{"user.form.username" | translate}} {{"user.form_validations.is_required" | translate}}
         </mat-error>
       </mat-form-field>
       <mat-form-field class="input-full-width">
-        <mat-label>Password</mat-label>
-        <input autocomplete="off" matInput formControlName="passwordFormControl" />
+        <mat-label>{{"user.form.passowrd" | translate}}</mat-label>
+        <input
+          autocomplete="off"
+          matInput
+          formControlName="passwordFormControl"
+          (keyup.enter)="login()"
+        />
         <mat-error *ngIf="hasError('passwordFormControl','minlength')">
-          Password must be at least 4 characters long.
+          {{"user.form.passowrd" | translate}}
+          {{"user.form_validations.must_be_at_least_4_characters_long" | translate}}.
         </mat-error>
         <mat-error *ngIf="hasError('passwordFormControl','required')">
-          Password is <strong>required</strong>
+          {{"user.form.passowrd" | translate}} {{"user.form_validations.is_required" | translate}}
         </mat-error>
       </mat-form-field>
     </form>
     <mat-card-content> </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button class="signin-btn" [disabled]="loginform.invalid" (click)="login()">
-        Sign In
+        {{"user.form.sign_in" | translate}}
       </button>
       <button mat-raised-button class="google-btn" (click)="loginWithGoogle()">
-        Sign up with google
+        {{"user.form.sign_up_with_google" | translate}}
       </button>
       <button mat-raised-button class="facebook-btn" (click)="loginWithFacebook()">
-        Sign up with Facebook
+        {{"user.form.sign_up_with_facebook" | translate}}
       </button>
     </mat-card-actions>
     <div class="input-text">
-      Not a member?
-      <a [routerLink]="['/register/#']"> Register</a>
+      {{"user.form.not_a_member" | translate}}
+      <a [routerLink]="['/register/#']">
+        {{"user.form.register" | translate}}
+      </a>
     </div>
   </mat-card>
 </div>
