--- a/src/app/features/admin-management/product-components/view-products/view-products.component.html
+++ b/src/app/features/admin-management/product-components/view-products/view-products.component.html
@@ -1,4 +1,4 @@
-<app-jumbotron [Heading]="'ALL-PRODUCTS'"></app-jumbotron>
+<app-jumbotron [Heading]="'admin.main_heading.all_products'"></app-jumbotron>
 <div class="outer-wrap">
   <mat-card class="display-products-card">
     <mat-card-content>
@@ -22,7 +22,7 @@
               matInput
               autocomplete="off"
               (keyup)="applyFilter($event)"
-              placeholder="Search"
+              placeholder="{{'admin.table.search' | translate}}"
             />
             <mat-icon matSuffix style="font-size: 18px;">search</mat-icon>
           </mat-form-field>
@@ -32,19 +32,23 @@
           <app-spinner [loading]="dataLoading"></app-spinner>
           <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
             <ng-container matColumnDef="image">
-              <th mat-header-cell mat-sort-header *matHeaderCellDef>Image</th>
+              <th mat-header-cell mat-sort-header *matHeaderCellDef>
+                {{"admin.table.image" | translate}}
+              </th>
               <td mat-cell *matCellDef="let element">
                 <img style="width: 40px;height: 40px;" src="{{ element.image }}" />
               </td>
             </ng-container>
             <ng-container matColumnDef="name">
-              <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
+              <th mat-header-cell mat-sort-header *matHeaderCellDef>
+                {{"admin.table.image" | translate}}
+              </th>
               <td mat-cell *matCellDef="let element">{{ element.name }}</td>
             </ng-container>
 
             <ng-container matColumnDef="quantity">
               <th mat-header-cell mat-sort-header *matHeaderCellDef>
-                Quantity
+                {{"admin.table.quantity" | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
                 <!-- <div class="input-quantity">
@@ -63,14 +67,16 @@
             </ng-container>
 
             <ng-container matColumnDef="price">
-              <th mat-header-cell mat-sort-header *matHeaderCellDef>Price</th>
+              <th mat-header-cell mat-sort-header *matHeaderCellDef>
+                {{"admin.table.price" | translate}}
+              </th>
               <td mat-cell *matCellDef="let element">{{ element.price }}</td>
             </ng-container>
 
             <ng-container matColumnDef="action">
               <th mat-header-cell mat-sort-header *matHeaderCellDef style="width: 200px;">
                 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; Action
+                &nbsp;&nbsp;&nbsp; {{"admin.table.action" | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
                 <button
