--- a/src/app/features/admin-management/user-components/block-user/block-user.component.html
+++ b/src/app/features/admin-management/user-components/block-user/block-user.component.html
@@ -1,8 +1,8 @@
-<app-jumbotron [Heading]="'BLOCK-A-USER'"></app-jumbotron>
+<app-jumbotron [Heading]="'admin.main_heading.block_user'"></app-jumbotron>
 <div class="delete-container">
   <div class="delete-input">
     <app-big-input
-      [placeholder]="'Enter The User-ID'"
+      [placeholder]="'admin.productform.enter_the_userid'"
       (keyup)="onInputChanged($event.target.value)"
     >
       <app-big-input-action
