--- a/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -1,12 +1,12 @@
 <div id="divDialogContent" mat-dialog-content>
-  <h2>Confirm</h2>
-  <p id="pMessage">{{ data.message }}</p>
+  <h2>{{"confirm.confirm" | translate}}</h2>
+  <p id="pMessage">{{ data.message | translate }}</p>
 </div>
 <div id="divDialogAction" mat-dialog-actions>
   <button id="btnYes" mat-flat-button color="primary" mat-dialog-close="yes" cdkFocusInitial>
-    Yes
+    {{"confirm.yes" | translate}}
   </button>
   <button id="btnNo" mat-flat-button color="warn" mat-dialog-close="no">
-    No
+    {{"confirm.no" | translate}}
   </button>
 </div>
