--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,9 +2,9 @@
   <mat-toolbar-row>
     <span>© 2020</span>
     <span class="signature">
-      <span>Made with </span> &nbsp;&nbsp;
+      <span>{{"footer.made_with" | translate}} </span> &nbsp;&nbsp;
       <mat-icon>favorite</mat-icon>
-      &nbsp;&nbsp;<span>by Kaushal Shah</span>
+      &nbsp;&nbsp;<span>{{"footer.by" | translate}} Kaushal Shah</span>
     </span>
     <span>1.0.0</span>
   </mat-toolbar-row>
