--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -34,6 +34,10 @@
         }
       }
     }
+    .search-icon {
+      font-size: 25px;
+      margin-right: 20px;
+    }
   }
   .language-dropdown {
     .mat-select {
